# mcp-examples

./: .cursorrules  README.md  pyproject.toml
deployments/: architecture.md
deployments/git/: Dockerfile  README.md  deploy.sh  k8s-deployment.yaml  k8s-ingress.yaml
examples/git/: README.md
examples/git/claude/: commands.md  config.json
examples/git/cursor/: config.json  prompts.md
examples/git/k8s/: mcp-git.yaml  usage.md
examples/git/local/: basic.py  multi_repo.py
servers/: README.md
servers/git/: README.md
