[project]
name = "mcp-example"
version = "0.1.0"
description = "Model Context Protocol (MCP) Example Server and Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0", # Model Context Protocol SDK
    "requests>=2.31.0",
    "click>=8.1.3",
    "streamlit>=1.24.0",
    "pydantic>=2.10.6",
    "uvicorn>=0.33.0",
    "fastapi>=0.115.12",
    "watchdog>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
